test/files/neg/classtags_contextbound_a.check
classtags_contextbound_a.scala:2: error: No ArrayTag available for T
  def foo[T] = Array[T]()
                       ^
one error found
